--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.27.0",
     "vue": "^3.2.47",
+    "vue-i18n": "9",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
