--- a/web/package.json
+++ b/web/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@urql/vue": "^1.1.0",
+    "firebase": "^9.20.0",
     "graphql": "^16.6.0",
     "pinia": "^2.0.32",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.27.0",
+    "sweetalert": "^2.1.2",
     "vue": "^3.2.47",
     "vue-i18n": "9",
     "vue-router": "^4.1.6"
