--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "code": "yarn codegen && yarn lint && yarn format"
   },
   "dependencies": {
+    "@urql/exchange-auth": "^2.1.1",
     "@urql/vue": "^1.1.0",
     "firebase": "^9.20.0",
     "graphql": "^16.6.0",
