--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@urql/vue": "^1.1.0",
     "firebase": "^9.20.0",
     "graphql": "^16.6.0",
+    "phoenix": "^1.7.2",
     "pinia": "^2.0.32",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
@@ -34,6 +35,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
+    "@types/phoenix": "^1.5.6",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
