🤖 chore: Docker ネットワーク設定

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       POSTGRES_PASSWORD: secret
     tty: true
     stdin_open: true
+    networks:
+      - my-network
   api:
     build:
       context: ./api
@@ -29,6 +31,8 @@ services:
     tty: true
     stdin_open: true
     env_file: .env
+    networks:
+      - my-network
   web:
     build:
       context: ./web
@@ -36,7 +40,11 @@ services:
     command: /bin/sh -c "yarn install && yarn dev"
     ports:
       - '8080:8080'
-      - '24678:24678'
     volumes:
       - ./web:/web
       - /web/node_modules
+    networks:
+      - my-network
+networks:
+  my-network:
+    external: true
