--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build:
       context: ./api
       dockerfile: containers/development/Dockerfile
-    command: /bin/bash -c "mix deps.get && iex -S mix phx.server"
+    command: /bin/bash -c "mix deps.get && chromedriver & iex -S mix phx.server"
     ports:
       - '3000:3000'
     volumes:
