🎸 feat: pgvector 導入
mix deps.unlock --unused

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: postgres:15.2-alpine
+    image: ankane/pgvector:v0.4.2
     ports:
       - '5432:5432'
     volumes:
